# kdb-feedhandler-tutorial

./: CMakeLists.txt  README.md
docs/latex/: AboutAquaQ.tex  ArchitectureOverview.tex  CompilingAndLinking.tex  Conclusion.tex  FeedHandlerWhitepaper.tex  Implementation.tex  Introduction.tex  RequirementsAndResources.tex  RevisionHistory.tex  RunningSampleCode.tex  preamble.tex
icons/: Thumbs.db
src/: fakefeed.c  fakefeed.h  main.c  run.q  run.sh
src/w32/: exports.def  fakefeed.def
